# sleigh

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODEOWNERS  README.md  flake.nix
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docs.yml  main.yml  update_head.yml
cmake/: ccache-msvc.cmake  coverage.cmake  dev-mode.cmake  docs.cmake  git_watcher.cmake  install-config.cmake  install-config.cmake.in  install-rules.cmake  libconfig.h.in  options.cmake  packaging.cmake  prelude.cmake  prevent_in_source_builds.cmake  project_settings.cmake  sanitizers.cmake  sleighConfig.cmake  sleighConfig.cmake.in  static_analyzers.cmake
cmake/modules/: sleighCompile.cmake
example/: CMakeLists.txt
example/src/: main.cpp
extra-tools/: CMakeLists.txt
extra-tools/sleigh-lift/: CMakeLists.txt
extra-tools/sleigh-lift/src/: main.cpp
include/: libsleigh.hh
patches/: README.md
patches/HEAD/: 0001-Fix-arg-parsing-in-sleigh-C-test-runner.patch  0001-Fixes-CLI-argument-parsing.patch  0002-Add-include-guards-to-decompiler-C-headers.patch  0002-Initialize-ID-lookup-tables-to-fix-sleighexample.patch  (+3 more)
scripts/: update_ghidra_head.py
sleighspecs/: CMakeLists.txt  specfiles.cmake.in
spec-files-list/: spec_files_HEAD.cmake  spec_files_stable.cmake
src/: CMakeLists.txt  README.md  compile_options.cmake  setup-ghidra-source.cmake  spec_files_HEAD.cmake  spec_files_stable.cmake
src/patches/: README.md
src/patches/HEAD/: 0001-Add-include-guards-to-decompiler-C-headers.patch  0001-Fix-UBSAN-errors-in-decompiler.patch  0001-Small-improvements-to-C-decompiler-testing-from-CLI.patch  0002-Add-include-guards-to-decompiler-C-headers.patch  0002-Fix-UBSAN-errors-in-decompiler.patch  0002-Use-stroull-instead-of-stroul-to-parse-address-offse.patch  0003-Add-missing-index-check-to-prevent-errors-in-Windows.patch  0003-Fix-ASAN-initialize-order-fiasco.patch  0003-Fix-C-sleighexample-compilation.patch  0003-Fix-UBSAN-errors-in-decompiler.patch  0003-Fix-sleighexample.patch  0003-Ignore-floating-point-test-due-to-compilation-differ.patch  0003-Undo-regression-in-sign_extend.patch  0003-Use-string-resize-instead-of-reserve.patch  0003-Use-stroull-instead-of-stroul-to-parse-address-offse.patch  0004-1-4-decompiler-Add-using-namespace-std-to-all-.cc-fi.patch  0004-Add-missing-using-std-symbols-to-sleighexample.patch  0004-Allow-positive-or-negative-NAN-in-decompiler-floatin.patch  0004-Fix-memory-leak-after-xml-errors.patch  0004-Fix-opening-sla-files-on-Windows.patch  0004-Ignore-floating-point-test-due-to-compilation-differ.patch  0004-Remove-using-namespace-std-from-headers.patch  0004-Use-string-resize-instead-of-reserve.patch  0004-Use-stroull-instead-of-stroul-to-parse-address-offse.patch  0005-2-4-decompiler-Automated-std-namespace-fix-with-remu.patch  0005-Add-missing-include-for-numeric_limits.patch  0005-Allow-positive-or-negative-NAN-in-decompiler-floatin.patch  0005-Fix-UBSAN-large-bitshift-errors.patch  0005-Ignore-floating-point-test-due-to-compilation-differ.patch  0005-Remove-using-namespace-std-from-headers.patch  0005-decompiler-Fix-strict-weak-ordering-TypePartialEnum.patch  0006-3-4-decompiler-Manually-fix-std-namespace-in-generat.patch  0006-Allow-positive-or-negative-NAN-in-decompiler-floatin.patch  0006-decompiler-Fix-strict-weak-ordering-PullRecord.patch  0006-decompiler-Fix-strict-weak-ordering-TypePartialEnum.patch  0007-4-4-decompiler-Manually-fix-missed-std-variable-usag.patch  0007-decompiler-Fix-strict-weak-ordering-compareFinalOrde.patch  0008-Fix-UBSAN-signed-left-shift-errors.patch  0009-Use-std-stoull-instead-of-std-stoul-in-scan_number-f.patch
src/patches/stable/: 0001-Fix-UBSAN-errors-in-decompiler.patch  0001-Small-improvements-to-C-decompiler-testing-from-CLI.patch  0002-Add-include-guards-to-decompiler-C-headers.patch  0002-Use-stroull-instead-of-stroul-to-parse-address-offse.patch  0003-Add-missing-index-check-to-prevent-errors-in-Windows.patch  0003-Fix-ASAN-initialize-order-fiasco.patch  0003-Fix-UBSAN-errors-in-decompiler.patch  0003-Ignore-floating-point-test-due-to-compilation-differ.patch  0003-Use-string-resize-instead-of-reserve.patch  0004-Allow-positive-or-negative-NAN-in-decompiler-floatin.patch  0004-Fix-memory-leak-after-xml-errors.patch  0004-Ignore-floating-point-test-due-to-compilation-differ.patch  0004-Use-string-resize-instead-of-reserve.patch  0004-Use-stroull-instead-of-stroul-to-parse-address-offse.patch  0005-1-4-decompiler-Add-using-namespace-std-to-all-.cc.patch  0005-Add-missing-index-check-to-prevent-errors-in-Windows.patch  0005-Allow-positive-or-negative-NAN-in-decompiler-floatin.patch  0005-Fix-UBSAN-large-bitshift-errors.patch  0005-Ignore-floating-point-test-due-to-compilation-differ.patch  0005-Remove-using-namespace-std-from-headers.patch  0005-decompiler-Fix-strict-weak-ordering-TypePartialEnum.patch  0006-2-4-decompiler-Remusing-automated-std-namespace-fix.patch  0006-Allow-positive-or-negative-NAN-in-decompiler-floatin.patch  0006-decompiler-Fix-strict-weak-ordering-PullRecord.patch  0006-decompiler-Fix-strict-weak-ordering-TypePartialEnum.patch  0006-decompiler-Fix-strict-weak-ordering-compareFinalOrde.patch  0007-3-4-decompiler-Manually-fix-std-namespace-in-generat.patch  0007-Backport-fix-for-datatests-retstruct.xml-tests.patch  0007-Fix-UBSAN-signed-left-shift-errors.patch  0007-decompiler-Fix-strict-weak-ordering-compareFinalOrde.patch  0008-4-4-decompiler-Manually-fix-missed-std-variable-usag.patch  0008-Fix-UBSAN-signed-left-shift-errors.patch
support/: CMakeLists.txt  GhidraVersion.cpp.in  SpecFilePaths.h.in  Support.cpp  Support.cpp.in  Support.h  Version.cpp.in  Version.h
support/include/sleigh/: Support.h  libsleigh.hh
tests/: CMakeLists.txt  no_using_namespace_std.cpp
tests/find_package/: CMakeLists.txt
tests/find_package/src/: main.cpp
tools/: CMakeLists.txt
tools/decompiler/: CMakeLists.txt
tools/ghidra/: CMakeLists.txt
tools/sleigh-lift/: CMakeLists.txt
tools/sleigh-lift/src/: main.cpp
tools/spec-compiler/: CMakeLists.txt
(+15 files in other folders)
